--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -1,6 +1,5 @@
-                        Installing IMITATOR II
-                        ======================
-
+                        Installing IMITATOR
+                        ===================
 
 
 Note: In case of problem, please read this INSTALL file carefully before reporting a bug.
@@ -11,15 +10,16 @@ Note: In case of problem, please read this INSTALL file carefully before reporti
 	* The OCaml ExtLib library (Extended Standard Library for Objective Caml)
 	* The GMP library Ocaml interface (http://www-verimag.imag.fr/~monniaux/download/mlgmp.tar.gz)
 	* The PPL library, including its Ocaml interface (http://www.cs.unipr.it/ppl/)
+	* the PWL library (Parma Watchdog Library), usually part of PPL
 
-   Optional components (for testing purposes)
+   Optional components
 	* dot (module of graphviz)
-	* The Ocaml unit test module (http://www.xs4all.nl/~mmzeeman/ocaml/)
 
+Note that 'dot', used to generate graphical outputs, is not necessary
+if you run IMITATOR using the '-no-dot' option.
 
-Note that 'dot', used to generate graphical outputs, is not necessary if you run IMITATOR II using the '-no-dot' option.
-
-The above libraries will probably require themselves several other libraries, including:
+The above libraries will probably require themselves several other
+libraries, including:
 	* g++
 	* m4
 	* GMP
@@ -27,20 +27,26 @@ The above libraries will probably require themselves several other libraries, in
 	* sed
 	* MPFR
 
-1. Extract the files from the archive to an installation directory, say <IMITATOR_II_install_dir>.
+1. Extract the files from the archive to an installation directory,
+   say <IMITATOR_install_dir>.
 
 2. Open the Makefile and update:
 	* EXTLIB_PATH : path to Ocaml ExtLib
-	* OCAML_PPL_PATH : path to the PPL Ocaml interface
-	* OCAML_GMP_PATH : path to the GMP Ocaml interface
+	* OCAML_PPL_PATH : path to the PPL Ocaml interface files
+	* OCAML_GMP_PATH : path to the GMP Ocaml interface files
+	* CLIB_PATH : path to the required native C libs, including:
+	  libpwl, libgmpxx, libgmp, libppl
 
-  Optionally, set 
-	* OUNIT_PATH : path to the Ocaml unit test module
 
-If you installed the required libraries in directories that are not searched by default by the compiler and/or linking tools, then, like with other libraries, you may need to set up some environment variables such as C_INCLUDE_PATH (to find headers), LIBRARY_PATH (to find libraries); this list is not exhaustive and some environment variables may be specific to your system.
+If you installed the required libraries in directories that are not
+searched by default by the compiler and/or linking tools, then, like
+with other libraries, you may need to set up some environment
+variables such as C_INCLUDE_PATH (to find headers), LIBRARY_PATH (to
+find libraries); this list is not exhaustive and some environment
+variables may be specific to your system.
 
 3. Type "make all".
 
-IMITATOR II will be installed in the installation directory <IMITATOR_II_install_dir>.
-You may copy it to your default binary directory by typing, e.g.:
-	"sudo cp <IMITATOR_II_install_dir>/IMITATOR /usr/bin/".
+IMITATOR will be installed in the installation directory <IMITATOR_install_dir>/bin.
+You may wish copy it to your default binary directory by typing, e.g.:
+"sudo cp <IMITATOR_install_dir>/bin/IMITATOR /usr/bin/".
