Infos release version 2.3
git-svn-id: https://svn.lsv.ens-cachan.fr/kuehne/projects/IMITATOR2/branches/pta@274 6f1578d2-a1e8-4f7d-a79a-10a3a1991f00

--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -4,7 +4,7 @@
 Note: In case of problem, please read this INSTALL file carefully before reporting a bug.
 
 The installation of IMITATOR II is very simple (see end of this file).
-However, the installation of the other libraries (especially PPL), although not difficult, will take more time…
+However, the installation of the other libraries (especially PPL), although not difficult, will take more time.
 
 
 ************************************************************
