Petites modifs et Makefile STATIQUE (enfin).
git-svn-id: https://svn.lsv.ens-cachan.fr/kuehne/projects/IMITATOR2/branches/pta@363 6f1578d2-a1e8-4f7d-a79a-10a3a1991f00

--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -163,9 +163,11 @@ INSTALL PPL
 
 	./configure --prefix=/usr --with-libgmp-prefix=/usr --with-libgmpxx-prefix=/usr --with-mlgmp=/usr/lib/ocaml/gmp
 
+Adding option "--disable-shared" may allow static compiling (?)
+
 	make
 
-	make check (optional and very very long, several hours at leasat)
+	make check (optional and very very long, several hours at least)
 OR (to check linking with ocaml)
 	cd interfaces
 	make check
