--- a/articles/2012-03-05-FM-HYMITATOR/biblioFM.bib
+++ b/articles/2012-03-05-FM-HYMITATOR/biblioFM.bib
@@ -460,6 +460,24 @@ Proceedings of the 17th International Colloquium on Automata, Languages and Prog
  }
 	address = {Essex, UK},
 
+@article{ADI2006,
+ author = {Alur, Rajeev and Dang, Thao and Ivan\v{c}i\'{c}, Franjo},
+ title = {Predicate abstraction for reachability analysis of hybrid systems},
+ journal = {ACM Trans. Embed. Comput. Syst.},
+ volume = {5},
+ issue = {1},
+ month = {February},
+ year = {2006},
+ issn = {1539-9087},
+ pages = {152--199},
+ numpages = {48},
+ url = {http://doi.acm.org/10.1145/1132357.1132363},
+ doi = {http://doi.acm.org/10.1145/1132357.1132363},
+ acmid = {1132363},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {Reachability analysis, hybrid systems, predicate abstraction},
+} 
 
 @inproceedings{adss07,
   	address =	{Braga, Portugal},
