--- a/articles/2012-03-05-FM-HYMITATOR/2012-03-05-HYMITATOR-FM.tex
+++ b/articles/2012-03-05-FM-HYMITATOR/2012-03-05-HYMITATOR-FM.tex
@@ -331,7 +331,10 @@ $^3$Universit\"at Bremen, Germany}
 \maketitle
 
 \begin{abstract}
-	\commentaire{to do}
+	Hybrid systems combine continuous and discrete behavior. 
+	Hybrid Automata are a powerful formalism for the modeling and verification of such systems.
+	A common problem in hybrid system verification is the good parameters problem, which consists in identifying a set of parameter valuations which guarantee a certain behavior of a system.
+	We present here \hymitator{}, a tool allowing efficient parameter synthesis for hybrid automata.
 \end{abstract}
 
 \keywords{Real-Time Systems, Hybrid Automata, Verification, Parameter Synthesis}
