modif make HYMITATOR pour static
git-svn-id: https://svn.lsv.ens-cachan.fr/kuehne/projects/IMITATOR2/trunk@398 6f1578d2-a1e8-4f7d-a79a-10a3a1991f00

--- a/articles/2012-03-05-FM-HYMITATOR/2012-03-05-HYMITATOR-FM.tex
+++ b/articles/2012-03-05-FM-HYMITATOR/2012-03-05-HYMITATOR-FM.tex
@@ -465,7 +465,7 @@ A constraint is output in text format; furthermore, the set of traces computed b
 	\item[Behavioral cartography] Given a model and a bounded parameter domain for each parameter valuation, it computes a set of constraints and their corresponding trace sets.
 \end{description}
 
-\hymitator{} uses several algorithmic optimizations, some of which have initially benn developed for \imitator{}.
+\hymitator{} uses several algorithmic optimizations, some of which have initially been developed for \imitator{}.
 In particular, the efficient merging presented in~\cite{AFS12} has been successfully extended to the hybrid case: we merge any two states sharing the same discrete part (location and value of the discrete variables) and such that the union of their constraint on the analog variables and parameters is convex.
 This optimization preserves the correctness of all our algorithms; better, the constraint output by the inverse method in that case may be weaker, i.e., covers a larger set of parameter valuations.
 
