--- a/articles/2012-03-05-FM/biblioFM.bib
+++ b/articles/2012-03-05-FM/biblioFM.bib
@@ -1153,14 +1153,16 @@ Proceedings of the 9th International Conference on Concurrency Theory
 @inproceedings{cpr08,
 	author = {Cimatti, A. and Palopoli, L. and Ramadian, Y.},
 	title = {Symbolic Computation of Schedulability Regions Using Parametric Timed Automata},
-	booktitle = {RTSS '08: Proceedings of the 2008 Real-Time Systems Symposium},
+	booktitle = {RTSS'08},
 	year = {2008},
 	isbn = {978-0-7695-3477-0},
 	pages = {80--89},
-	doi = {http://dx.doi.org/10.1109/RTSS.2008.36},
 	publisher = {IEEE Computer Society},
 	address = {Washington, DC, USA},
 }
+	doi = {http://dx.doi.org/10.1109/RTSS.2008.36},
+	booktitle = {RTSS '08: Proceedings of the 2008 Real-Time Systems Symposium},
+	address = {Washington, DC, USA},
 
 
 @ARTICLE{cr06,
@@ -1941,6 +1943,23 @@ year={1976}
  }
  address = {London, UK},
 
+ 
+ 
+@inproceedings{LPPRC10,
+  author    = {Thi Thieu Hoa Le and
+               Luigi Palopoli and
+               Roberto Passerone and
+               Yusi Ramadian and
+               Alessandro Cimatti},
+  title     = {Parametric analysis of distributed firm real-time systems:
+               A case study},
+  booktitle = {ETFA},
+  year      = {2010},
+  pages     = {1-8},
+}
+  ee        = {http://doi.ieeecomputersociety.org/10.1109/ETFA.2010.5641315},
+  crossref  = {DBLP:conf/etfa/2010},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
 
 @article{ lpy97,
     author = "K.G. Larsen and P. Pettersson and W. Yi",
@@ -1966,19 +1985,20 @@ year={1976}
 
 
 @inproceedings{lrst09,
-	ADDRESS = {York, United Kingdom},
 	AUTHOR = {D. Lime and O. H. Roux and C. Seidner and L.-M. Traonouez},
-	EDITOR = {Stefan Kowalewski and Anna Philippou},
-	booktitle = {15th International Conference on Tools and Algorithms for the Construction and Analysis of Systems (TACAS 2009)},
-	MONTH = MAR,
+	booktitle = {TACAS'09},
 	PUBLISHER = {Springer},
 	SERIES = {LNCS},
 	VOLUME = {5505},
 	PAGES = {54-57},
 	TITLE = {Romeo: A Parametric Model-Checker for {Petri} Nets with Stopwatches},
 	YEAR = 2009,
-	CATEGORY = {intc}
 }
+	ADDRESS = {York, United Kingdom},
+	EDITOR = {Stefan Kowalewski and Anna Philippou},
+	booktitle = {15th International Conference on Tools and Algorithms for the Construction and Analysis of Systems (TACAS 2009)},
+	MONTH = MAR,
+	CATEGORY = {intc}
 
 
 @article{lv95,
@@ -2305,6 +2325,28 @@ Proceedings of the 18th Annual IEEE Symposium on Logic in Computer Science
 }
 
 
+@article{SGL97,
+ author = {Sun, Jun and Gardner, Mark K. and Liu, Jane W. S.},
+ title = {Bounding Completion Times of Jobs with Arbitrary Release Times,
+Variable Execution Times, and Resource Sharing},
+ journal = {IEEE Trans. Softw. Eng.},
+ volume = {23},
+ issue = {10},
+ year = {1997},
+ issn = {0098-5589},
+ pages = {603--615},
+ numpages = {13},
+ acmid = {271012},
+ publisher = {IEEE Press},
+}
+ url = {http://dx.doi.org/10.1109/32.637144},
+ doi = {http://dx.doi.org/10.1109/32.637144},
+ address = {Piscataway, NJ, USA},
+ keywords = {Real-time systems, schedulability analysis, precedence
+constraints, resource sharing.},
+ month = {October},
+
+ 
 @techreport{SLDLS11,
 	author    = {J. Sun and
 		Y. Liu and
